Use Sysetm.getProperty instead of command line args